@@ -64,4 +64,7 @@ Revision history for CatalystX-CRUD-Controller-RHTMLO
 
 0.17    xxx
         * change tact altogether in form_to_object() and assume there are no autoincrement fields in $form
+        * move the form/object seeding in create() to the core Controller create() method. This change
+          is as much to solve a strange Class::C3/Dispatcher issue with multiple inheritance as anything.
+
  
